# steerio

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
dashboard/: __init__.py  index.html  server.py
demo/: caller.py  dashboard.html  dashboard.py  demo.py  demo_eval.py  demo_voice.py  scenarios.py
steerio/: __init__.py  protocol.py
steerio/compliance/: __init__.py  audit.py  harness.py  report.py  scenarios.py
steerio/core/: __init__.py  context.py  judge.py  judges.py  metrics.py  monitor.py  recorder.py  wrap.py
steerio/policies/: __init__.py  base.py
steerio/store/: __init__.py  schema.sql  seed.sql  supabase.py
